--- a/jquery.html
+++ b/jquery.html
@@ -5,27 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css\bootstrap.min.css">
+    <script src="js\jquery-3.6.3.min.js"></script>
     <script>
-        $(selector).submit(function (e) { 
-            e.preventDefault();
-            
+        $(document).ready(function() {
+            $("form").submit(function(event){ 
+                var forminput = $("form").serializeArray()
+                $.each(forminput, function (i, forminput) { 
+                     $(".result").append(forminput.value + "");
+                });
+            });
         });
     </script>
 </head>
 <body>
     <form>
-        <input type="checkbox" name="" id=""><label>Rick</label><br>
-        <input type="checkbox" name="" id=""><label>Astley</label><br>
+        <input type="checkbox" name="" id="chk1" value="Rick"><label for="chk1">Rick</label><br>
+        <input type="checkbox" name="" id="chk2" value="Astley"><label for="chk2">Astley</label><br>
         <select name="" id="" style="padding: 2px;">
             <option disabled selected hidden>Select...</option>
-            <option value="">Never</option>
-            <option value="">Gonna</option>
-            <option value="">Give</option>
-            <option value="">You</option>
-            <option value="">Up</option>
+            <option value="Never">Never</option>
+            <option value="Gonna">Gonna</option>
+            <option value="Give">Give</option>
+            <option value="You">You</option>
+            <option value="Up">Up</option>
         </select>
-        <button type="button" class="btn btn-primary">Primary</button>
-    </form>
+        <button type="submit" class="btn btn-primary">Primary</button>
+    </form><br>
     <div class="result"></div>
 </body>
 </html>
