final 2 : electric boogaloo

--- a/jquery.html
+++ b/jquery.html
@@ -11,16 +11,19 @@
 <body>
     <p>abc</p>
     <form>
-        <input type="checkbox" name="check" id="chk1" value="Rick"><label for="chk1">Rick</label><br>
-        <input type="checkbox" name="check" id="chk2" value="Astley"><label for="chk2">Astley</label><br>
         <select name="select" id="" style="padding: 2px;">
             <option disabled selected hidden>Select...</option>
-            <option>Never</option>
-            <option>Gonna</option>
-            <option>Give</option>
-            <option>You</option>
-            <option>Up</option>
+            <option>Rick</option>
+            <option>Astley</option>
+        <select name="select" id="" style="padding: 2px;">
+            <option>Rick</option>
+            <option>Astley</option>
         </select>
+        <input type="checkbox" name="check" id="chk1" value="Never"><label for="chk1">Never</label><br>
+        <input type="checkbox" name="check" id="chk2" value="Gonna"><label for="chk2">Gonna</label><br>
+        <input type="checkbox" name="check" id="chk1" value="Give"><label for="chk1">Give</label><br>
+        <input type="checkbox" name="check" id="chk2" value="You"><label for="chk2">You</label><br>
+        <input type="checkbox" name="check" id="chk2" value="Up"><label for="chk2">Up</label><br>
     </form>
     <button type="button" class="btn btn-primary">Primary</button><br>
     <div id="result">result: </div>
