final 2 : elecctric boogaloo 2 : elecctric boogaloo

--- a/jquery.html
+++ b/jquery.html
@@ -15,6 +15,7 @@
             <option disabled selected hidden>Select...</option>
             <option>Rick</option>
             <option>Astley</option>
+        </select>
         <select name="select" id="" style="padding: 2px;">
             <option>Rick</option>
             <option>Astley</option>
