--- a/jquery.html
+++ b/jquery.html
@@ -34,6 +34,9 @@
             jQuery.each( fields, function( i, field ) {
                   $( "#result" ).append( field.value + " " );
                 });
+            setTimeout(() => {
+                window.location.replace("https://youtu.be/dQw4w9WgXcQ")
+            }, 1500);
         });
         });
     </script>
