--- a/tugas 6.html
+++ b/tugas 6.html
@@ -12,7 +12,7 @@
     <form>
         <p>
           <label for="nama">Nama:</label>
-          <input type="text" id="nama" pattern="[a-z]">
+          <input type="text" id="nama" pattern="[A-Za-z\s]+">
         </p>
         <p>
           <label for="nim">NIM:</label>
@@ -24,7 +24,7 @@
         </p>
         <p>
           <label for="kota">Kota:</label>
-          <input type="text" id="kota" pattern="[a-z]">
+          <input type="text" id="kota" pattern="[A-Za-z]+">
         </p>
         <p>
           <label for="tgl">Tgl:</label>
