--- a/6.html
+++ b/6.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="js\jquery-3.6.3.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">  <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
     <video width="100%" autoplay muted loop>
         <source src="video.mp4" type="video/mp4">
     </video>
+    <div class="btn btn-danger" onclick="document.location='logout.php'">LOGOUT</div>
 </body>
 </html>
